<resources>
    <string name="app_name">SinergiMuslim</string>
    <string name="tetang_aplikasi1">Platform untuk bersinergi dengan Seluruh Muslim,</string>
    <string name="tetang_aplikasi2"> Membangun Relasi, Membuat Kerja Sama yang berguna</string>
    <string name="tetang_aplikasi3">  untuk Umat Muslim khususnya di Indonesia</string>
    <string name="sinergimuslimv">Sinergi Muslim v1.0</string>
    <string name="created_by">Created By Pondok Programmer</string>
</resources>
