<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".TantanganAplikasiActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        >
        <Button
            android:id="@+id/buttonBackTentang"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_chevron_left_black_24dp"/>

        <TextView
            android:gravity="center"
            android:text="Tentang Aplikasi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/group"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tetang_aplikasi1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tetang_aplikasi2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tetang_aplikasi3"/>
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/sinergimuslimv"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/created_by"/>

</LinearLayout>